--- a/template.tex
+++ b/template.tex
@@ -21,7 +21,7 @@
 \IACpapernumber{AML-v1b}
 \IACcopyright{2024}{Duy Nam Schlitz}
 
-\title{Astern: Code Transfiguration to Deeper Layer : Codetranformation zu tieferen Schichten}
+\title{Advanced Math Logic}
 
 \IACauthor*{Duy Nam Schlitz}{A young boy who wants more.}{duynamschlitzbusiness@gmail.com}
 
@@ -77,12 +77,12 @@ $$ \mathbb{N} \logicalEquL \ifL (\forall x \in \mathbb{N} : x > 0) \toL \trueL \
 \subsection{Using the "True" and "False" Symbols}
 
 In logical operations, the "true" symbol is denoted by $\trueL$, while the "false" symbol is denoted by $\falseL$:
-$$\ifL (x > 0) \toL \trueL \quad \elseL (x \leq 0) \toL \falseL$$
+$$\ifL (x > 0) \toL \trueL  \elseL (x \leq 0) \toL \falseL$$
 
 \subsection{"Additional Content" Symbol in Context}
 
 If the value of $x$ meets the condition, we add some additional content using the "additional content" symbol: 
-$\additionalcontent \quad x' = 2x$.
+$\additionalcontent  x' = 2x$.
 
 \subsection{End Symbol Usage}
 
@@ -97,8 +97,8 @@ $\logicalEquL (x = y) \toL f(x) = f(y)$.
 \subsection{Combining Multiple Symbols in a Complex Statement}
 
 $$
-    \ifL (a > b) \toL f(a) > f(b) \quad 
-    \elifL (a = b) \toL f(a) = f(b) \quad 
+    \ifL (a > b) \toL f(a) > f(b)  
+    \elifL (a = b) \toL f(a) = f(b)  
     \elseL \toL \undefinedL
 $$
 
